# krita

./: CMakeLists.txt  README.md  krita.py
krita/: CMakeLists.txt
libs/: CMakeLists.txt
libs/brush/: CMakeLists.txt
libs/command/: CMakeLists.txt
libs/flake/: CMakeLists.txt
libs/global/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/libkis/: CMakeLists.txt
libs/metadata/: CMakeLists.txt
libs/pigment/: CMakeLists.txt  KoOptimizedPixelDataScalerU8ToU16Factory.cpp  KoOptimizedPixelDataScalerU8ToU16FactoryImpl.h
libs/resources/: CMakeLists.txt
libs/store/: CMakeLists.txt
libs/ui/: CMakeLists.txt
libs/widgets/: CMakeLists.txt
libs/widgetutils/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/dockers/: CMakeLists.txt
plugins/dockers/animation/: CMakeLists.txt
plugins/dockers/layerdocker/: CMakeLists.txt
plugins/dockers/storyboarddocker/: CMakeLists.txt
plugins/extensions/: CMakeLists.txt
plugins/filters/: CMakeLists.txt
plugins/filters/unsharp/: CMakeLists.txt
plugins/generators/screentone/: CMakeLists.txt
plugins/impex/brush/: CMakeLists.txt
plugins/impex/csv/: CMakeLists.txt
plugins/impex/exr/: CMakeLists.txt
plugins/impex/gif/: CMakeLists.txt
plugins/impex/heif/: CMakeLists.txt
plugins/impex/heightmap/: CMakeLists.txt
plugins/impex/jp2/: CMakeLists.txt
plugins/impex/jpeg/: CMakeLists.txt
plugins/impex/jxl/: CMakeLists.txt
plugins/impex/libkra/: CMakeLists.txt
plugins/impex/ora/: CMakeLists.txt
plugins/impex/png/: CMakeLists.txt
plugins/impex/psd/: CMakeLists.txt
plugins/metadata/: CMakeLists.txt
(+16 files in other folders)
